infra/k8s/posts-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: posts-depl
spec:
    replicas: 1
    selector:
        matchLabels:
            app: posts
    template:
        metadata:
            labels:
                app: posts
        spec:
            containers:
                - name: posts
                  image: vectornull/posts
                  imagePullPolicy: IfNotPresent
# Run the following in terminal window before applying deployment (posts-depl.yaml). You might have to rebuild your docker image.
# minikube start --driver=virtualbox
# eval $(minikube docker-env)
# kubectl apply -f posts-depl.yaml
---
apiVersion: v1
kind: Service
metadata:
    name: posts-clusterip-srv
spec:
    selector:
        app: posts
    type: ClusterIP
    ports:
        - name: posts
          protocol: TCP
          port: 4000
          targetPort: 4000
