infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: ingress-srv
    annotations:
        kubernetes.io/ingress.class: nginx
spec:
    rules:
        - host: posts.com # Update hosts file on your computer by using output of <minikube ip> and this hostname
          http:
              paths:
                  - path: /posts
                    pathType: Prefix
                    backend:
                        service:
                            name: posts-clusterip-srv
                            port:
                                number: 4000
